# youtube-note-thing

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
archive_internal/: README.md
docs/: README.md
docs/developer-guide/: architecture.md  backend_guide.md  building_from_source.md  data_model_and_migrations.md  frontend_guide.md  how_to_extend.md  integrations.md  testing_and_verification.md
docs/user-guide/: appearance_and_window.md  getting_started.md  keyboard_shortcuts.md  library_and_filters.md  phoneme_integration.md  settings_reference.md  tags.md  taking_notes.md  troubleshooting.md  youtube_account_and_playlists.md
plans/: ADR-001-template.md  ARCHITECTURE.md  COMPETITORS.md  INTEGRATIONS.md  PHONEME_ASKS.md  README.md  ROADMAP.md  TESTING_STRATEGY.md  UX.md
src/: api.ts  app.ts  lib.test.ts  lib.ts  main.ts  markdown.ts  player.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_tags.sql  003_ext_ref.sql  004_pinned.sql  005_playlists.sql  006_video_meta.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src/styles/: theme.css
