[package]
name = "youtube-note-thing"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "ytnt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "youtube-note-thing"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[features]
# keep parity with the tauri template; nothing custom yet
default = []
